# state-machine-test

./: Makefile  README.md  output.json  pyproject.toml
data/input/: function_calling_tests.json
data/output/: output.json
src/: __main__.py  building.py  fill_dic_value.py  function_matching.py  get_func_name.py  get_parameters.py  main.py  output.json  parsing_json.py  states.py  tree_functions.py
