[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "torch>=2.12.0",
    "llm_sdk",
    "pydantic>=2.13.4",
    "mypy>=2.1.0",
    "flake8>=7.3.0",
]

[tool.uv.workspace]
members = ["llm_sdk"]

[tool.uv.sources]
llm_sdk = { workspace = true }
